# simple-paint

./: .cppQuickFix  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main  message.txt  todolist
skins/default/: skin.xml
skins/designed/: Scrollbar.xcf  skin.xml
skins/minimalistic/: Skin.xcf  skin.xml
src/: Application.cpp  Application.hpp  CoordinateSystem.cpp  CoordinateSystem.hpp  GEMain.cpp  MainWindow.cpp  MainWindow.hpp  Raycaster.cpp  Raycaster.hpp  VectorPlot.cpp  VectorPlot.hpp  main.cpp
src/AbstractGL/: AImage.hpp  AObject.hpp  ARenderSurface.hpp  ASprite.hpp  AText.hpp  ATexture.hpp  AWindow.hpp  Button.cpp  Button.hpp  CMakeLists.txt  Color.cpp  Color.hpp  Event.cpp  Event.hpp  EventManager.cpp  EventManager.hpp  SFMLImage.cpp  SFMLImage.hpp  SFMLRenderSurface.cpp  SFMLRenderSurface.hpp  SFMLSprite.cpp  SFMLSprite.hpp  SFMLText.cpp  SFMLText.hpp  SFMLTexture.cpp  SFMLTexture.hpp  SFMLWindow.cpp  SFMLWindow.hpp  Signals.hpp  Surface.hpp  Widget.cpp  Widget.hpp
src/ColorDialog/: CMakeLists.txt  ColorDialog.cpp  ColorDialog.hpp
src/GEditor/: BasicTools.cpp  BasicTools.hpp  CMakeLists.txt  Canvas.cpp  Canvas.hpp  CentralWidget.cpp  CentralWidget.hpp  ColorSelector.cpp  ColorSelector.hpp  GEditor.cpp  GEditor.hpp  GEditorWindow.cpp  GEditorWindow.hpp  GrandDesign.hpp  Layers.cpp  Layers.hpp  LeftPanel.cpp  LeftPanel.hpp  MoveLayer.cpp  MoveLayer.hpp  Plugins.cpp  Plugins.hpp  Tool.hpp  ToolPanel.cpp  ToolPanel.hpp  Toolbox.cpp  Toolbox.hpp
src/Gif/: Gif.hpp
src/LogUtils/: CMakeLists.txt  ConsoleLogger.cpp  ConsoleLogger.hpp  LogUtils.cpp  LogUtils.hpp  Logger.cpp  Logger.hpp  NullLogger.hpp
src/MGeomerty/: CMakeLists.txt  Float.hpp  Geometry.hpp  Intersects.cpp  Intersects.hpp  Line.cpp  Line.hpp  Operations.hpp  Plane.cpp  Plane.hpp  Point.hpp  Rect.hpp  Sphere.cpp  Sphere.hpp  Vector.cpp  Vector.hpp
src/Plugins/: Aero.cpp  Aero.hpp  BBrushes.cpp  BBrushes.hpp  Base.cpp  Base.hpp  BetPlug.cpp  BetPlug.hpp  Blur.cpp  Blur.hpp  BrezLine.cpp  BrezLine.hpp  Brushes.hpp  CMakeLists.txt  Color.cpp  Color.hpp  Curves.cpp  Curves.hpp  Filler.cpp  Filler.hpp  Grayer.cpp  Grayer.hpp  Interpolate.cpp  Interpolate.hpp  Pen.cpp  Pen.hpp  Pippet.cpp  Pippet.hpp  PixArr.cpp  PixArr.hpp  ShapeFillers.cpp  ShapeFillers.hpp  Signals.hpp  Vector.cpp  Vector.hpp  Zoomer.hpp  tools.hpp
src/Raytracer/: CMakeLists.txt  Camera.cpp  Camera.hpp  ColorAvg.hpp  MaterialCollection.cpp  Raytracer.cpp  Raytracer.hpp  RenderObject.hpp  RenderPlane.cpp  RenderPlane.hpp  RenderSphere.cpp  RenderSphere.hpp  Scene.cpp  Scene.hpp  SceneEditor.cpp  SceneEditor.hpp
src/Vector/: CMakeLists.txt  LinkedList.hpp  Vector.cpp  Vector.hpp
src/Widgets/: Application.cpp  Application.hpp  Button.cpp  Button.hpp  CMakeLists.txt  Checkbox.cpp  Checkbox.hpp  CollapsibleContainer.hpp  ContainerWidget.hpp  ContainterWidget.hpp  Decorations.cpp  Decorations.hpp  Dialog.hpp  Gui.hpp  Label.cpp  Label.hpp  Menubar.cpp  Menubar.hpp  NumInput.cpp  NumInput.hpp  Scrollbar.cpp  Scrollbar.hpp  SkinManager.cpp  SkinManager.hpp  Slider.cpp  Slider.hpp  TextInput.cpp  TextInput.hpp  Widget.cpp  Widget.hpp  WindowWidget.hpp
